2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/jst/Pipeline.java: (Pipeline.useClock),
	(Pipeline.add), (Pipeline), (Pipeline.remove):
	Don't accept null elements in add and remove.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado), (Cortado.init),
	(Cortado.handleMessage):
	Cleanups.
	Pause pipeline while buffering.
	
	* src/com/fluendo/plugin/AudioSink.java:
	(AudioSink.RingBuffer.setSample), (AudioSink.RingBuffer.play),
	(AudioSink.RingBuffer.pause):
	* src/com/fluendo/plugin/AudioSinkJ2.java:
	Compile fixes.

	* src/com/fluendo/plugin/HTTPSrc.java: (HTTPSrc.Pad):
	Post stream status messages.

	* src/com/fluendo/plugin/Queue.java: (Queue.updateBuffering),
	(Queue.Pad):
	Never pause the stream when we are buffering so that we can
	preroll while buffering.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/Cortado.java: (Cortado.stringToTime),
	(Cortado.handleMessage):
	Update buffering info.

	* src/com/fluendo/player/Status.java: (Status):
	Print buffering nicely.

	* src/com/fluendo/plugin/AudioSink.java:
	(AudioSink.RingBuffer.stop):
	* src/com/fluendo/plugin/AudioSinkSA.java: (AudioSinkSA),
	(AudioSinkSA...RingReader.RingBufferSA),
	(AudioSinkSA...RingReader.RingBufferSA.startWriteThread),
	(AudioSinkSA...RingReader.open), (AudioSinkSA...RingReader.write):
	Some cleanups.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/player/CortadoPipeline.java:
	(CortadoPipeline.build):
	Autodetect audio backend.

	* src/com/fluendo/plugin/AudioSinkSA.java:
	(AudioSinkSA...RingReader.createRingBuffer),
	(AudioSinkSA...RingReader.write):
	Fix sync in sun.audio backend.

2006-01-19  Wim Taymans  <wim@fluendo.com>

	* src/com/fluendo/plugin/AudioSink.java: (AudioSink),
	(AudioSink.AudioClock.getInternalTime), (AudioSink.RingBuffer.run),
	(AudioSink.RingBuffer.acquire),
	(AudioSink.RingBuffer.samplesPlayed), (AudioSink.doEvent):