@@ -1,23 +1,28 @@
 WHAT IT IS
 ----------
 
-This is the first public release of the source code for Fluendo's
-"Cortado" Java media player.  The player can be used as an applet to play
-back files and network streams.  It was created to integrate with
-the Flumotion Streaming Server.
+This is Cortado, a multimedia framework for Java written by Fluendo.
 
-This first release has support for
-- local files and network streams
-- Ogg and Multipart containers
-- Theora, JPEG and Smoke video codecs
-- Vorbis and MuLaw audio codecs
-- 1.1 javasound API
-- 1.4 javax sound API
+It contains:
+- JST, a port of the GStreamer 0.10 design to Java
+- jcraft, a copy of the JCraft JOgg/Jorbis code
+- jheora, an implementation of Theora in Java
+- codecs (currently only containing the Smoke codec, a variant on Jpeg)
+- JST plugins for:
+  - HTTP source element
+  - Ogg and Multipart demuxers
+  - Theora, JPEG and Smoke video decoders
+  - Vorbis and MuLaw audio decoders
+   - Java 1.1 sun.audio API audio sink
+   - Java 1.4 javax.sound.sampled API audio sink
+- examples
+- applets
+
+This release has support for
+- seeking
+- the above-mentioned plugins
 - basic HTTP authentication
 - buffering
-
-The build setup is still a little bit shaky, combining ant build stuff
-with a standard Makefile.  We could use a little help there.
 
 BUGS
 ----
@@ -30,14 +35,28 @@ Make sure to choose the "cortado" component.
 BUILDING
 --------
 
-Example build on Fedora Core 2 with jikes installed:
+The build uses ant exclusively now.
 
-- build the applet with Ogg, Vorbis and Theora:
-CLASSPATH=/usr/share/java/libgcj-3.4.0.jar make ovt
+Normally, running
 
-- build the applet with Multipart, Mulaw, JPEG and smoke:
-CLASSPATH=/usr/share/java/libgcj-3.4.0.jar make mmjs
+  ant
 
+Should build everything, if your system is setup correctly.
+
+You can copy build.config.sample to build.config and tweak it to choose
+certain settings.
+
+EXAMPLES
+--------
+
+You need a Java Virtual Machine to run the example code.
+You also need to set the classpath to your build tree when running
+(output/build/debug or output/build/release)
+
+- Jikes does not have a VM
+- gij (the GNU Java VM) seems to hang right after opening the HTTP connection
+- Sun Java VM works for me:
+  /usr/java/jre1.5.0_04/bin/java -cp output/build/debug com.fluendo.examples.Player3 http://stream.fluendo.com:8850
 
 USAGE
 -----
@@ -96,12 +115,13 @@ parameters:
 Using javascript
 ----------------
 
-The applet parameters can be changed from javascript by calling the setParam(key, value)
-on the applet. After setting the new parameters in the applet it needs to be restarted
-with the restart() method for the changes to take effect.
+The applet parameters can be changed from javascript by calling the
+setParam(key, value) on the applet. After setting the new parameters in the
+applet it needs to be restarted with the restart() method for the changes to
+take effect.
 
-The following piece of HTML demonstrates switching URLs with an without sound using 
-javascript:
+The following piece of HTML demonstrates switching URLs with an without sound
+using javascript:
 
 <html>
  <head>
